--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1
   go_router: ^14.1.2
+  dartz: ^0.10.1
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
