--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   go_router: ^14.1.2
   dartz: ^0.10.1
   dio: ^5.4.3+1
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
