--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^5.4.3+1
   flutter_bloc: ^8.1.6
   get_it: ^7.7.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
